--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,19 +8,19 @@ body {
     font-size: 2.5em;
 }
 
-#square-sum {
+.square-sum {
     width: 33%;
     float: left;
     text-align: left;
 }
 
-#square-diff {
+.square-diff {
     width: 33%;
     margin: 0 auto;
     text-align: left;
 }
 
-#square-conjugate {
+.square-conjugate {
     width: 33%;
     float: right;
     text-align: left;
