Add basic HTML structure of challenge area. Add empty Javascript functions for challenge game.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,10 @@ body {
     text-align: center;
 }
 
+#theory {
+    padding-top: 30px;
+    padding-left: 30px;
+}
 
 #practice-area {
     padding-top: 30px;
